<resources>
    <string name="app_name">ProjectDevelopModule</string>

    <!--label-->
    <string name="label_compat_inset_image_header">CompatInsetImageHeaderActivity</string>
    <string name="label_compat_inset_toolbar">CompatInsetToolbarActivity</string>
    <string name="label_compat_single_inset_image_header">CompatSingleInsetImageHeaderActivity</string>
    <string name="label_compat_single_inset_toolbar">CompatSingleInsetToolbarActivity</string>
    <string name="label_bottom_dialog_date_time">BottomDialogDateTimeViewActivity</string>
    <string name="label_address_picker">AddressPickerActivity</string>
    <string name="label_flow_layout">FlowLayoutActivity</string>
    <string name="label_test_guide">GuideTestActivity</string>
    <string name="label_develop_util">DevelopUtil</string>
    <string name="label_image_switcher">ImageSwitcherTestActivity</string>
    <string name="label_validator">FormValidator</string>
    <string name="label_validator2">FormValidator2</string>
    <string name="label_spring_viewgroup">SpringViewGroupActivity</string>
    <string name="label_form_item_view">FormItemViewActivity</string>
    <string name="label_bottom_image_picker_view">BottomImagePickerActivity</string>
    <string name="label_image_text_button">ImageTextButtonActivity</string>
    <string name="label_app_update">AppUpdate</string>

    <!-- menu -->
    <string name="menu_action_bottom_date">Date</string>
    <string name="menu_action_bottom_time">Time</string>
    <string name="menu_action_bottom_date_time">DateTime</string>

    <string name="menu_action_province">Province</string>
    <string name="menu_action_province_city">Province City</string>
    <string name="menu_action_province_city_district">Province City District</string>

    <!--address picker-->
    <string name="address_format">%1$s %2$s %3$s</string>

    <!-- develop util -->
    <string name="util_click_span_helper_content">Android 7.0 Nougat is here! Get your apps ready for the latest version of Android, with new system behaviors to save battery and memory. Extend your apps with multi-window UI, direct reply notifications and more.多窗口支持</string>
    <string name="util_click_span_helper_01">Android 7.0 Nougat</string>
    <string name="util_click_span_helper_02">multi-window UI</string>
    <string name="util_click_span_helper_03">多窗口</string>

    <string name="info_personal_name">姓名</string>
    <string name="info_personal_phone_number">手机号码</string>
    <string name="info_personal_marital_state">婚姻状况</string>
    <string name="info_personal_work_info">工作信息</string>


    <string name="info_personal_name_hint">请输入姓名</string>
    <string name="info_personal_phone_number_hint">请输入手机号</string>
    <string name="info_personal_marital_state_hint">请选择婚姻状况</string>
    <string name="picker_bottom_sheet_behavior">com.loopeer.bottomimagepicker.PickerBottomBehavior</string>

    <string name="inset_test_content">Support libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versionsSupport libraries allow apps running on older versions of the Android platform to support features made available on newer versions</string>

</resources>
